Fix: #126515: Brush radius sensitivity not consisted at different zoom levels.

The problem was that the screen space size of the brush was not updated.
This was not fully noticeable because the radius control operator was using a not fully implemented scale correction.