source/blender/editors/sculpt_paint/paint_cursor.cc
@@ -1559,6 +1559,7 @@ static void grease_pencil_brush_cursor_draw(PaintCursorContext *pcontext)
       const float3 location = placement.project(float2(pcontext->x, pcontext->y));
       pcontext->pixel_radius = project_brush_radius(
           &pcontext->vc, brush->unprojected_radius, location);
+      brush->size = pcontext->pixel_radius;
     }
 
     /* Get current drawing material. */
